Adds remove try catch